<resources>
    <string name="app_name">Project 1 Group 8</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="USOne">User Story 1</string>
    <string name="USTwo">User Story 2</string>
    <string name="USThree">User Story 3</string>
    <string name="USFour">User Story 4</string>
    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>


    <string-array name="spinner_options">
        <item>Unsorted</item>
        <item>Sort by Time</item>
        <item>Sort by Course</item>
    </string-array>

</resources>