<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_USOne"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/USOne" />
        <item
            android:id="@+id/nav_USTwo"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/USTwo" />
        <item
            android:id="@+id/nav_USThree"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/USThree" />
        <item
            android:id="@+id/nav_USFour"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/USFour" />
    </group>
</menu>