<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.project1group8.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_USOne"
        android:name="com.example.project1group8.ui.US1.USOneFragment"
        android:label="@string/USOne"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_USTwo"
        android:name="com.example.project1group8.ui.US2.USTwoFragment"
        android:label="@string/USTwo"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_USThree"
        android:name="com.example.project1group8.ui.US3.USThreeFragment"
        android:label="@string/USThree"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_USFour"
        android:name="com.example.project1group8.ui.US4.USFourFragment"
        android:label="@string/USFour"
        tools:layout="@layout/fragment_gallery" />


</navigation>